--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,66 @@
 /* ----RESET---- */
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /* ----RESET---- */
 
 
 
+/* ----COMMON------ */
 
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+
+
+.container{
+    max-width: 1400px;
+    margin: auto;
+    
+}
+
+/* ----COMMON------ */
+
+
+
+/* ----HEADER----- */
+
+header{
+    background-color: #ff6900;
+    color: white;
+}
+
+.row{
+    padding: 14px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    
+}
+
+
+.logo img{
+    width: 140px;
+    margin-right: 70px;
+    
+}
+
+
+
+.sesso a{
+    padding: 0 5px;
+    text-decoration: none;
+    color: white;
+}
+
+
+.icon a{
+    padding: 0 5px;
+    color: white;
+}
