--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ body{
 /* ----HEADER----- */
 
 header{
+    position: fixed;
+    z-index: 100;
+    /* top 0; */
+    right: 0;
+    left: 0;
     background-color: #ff6900;
     color: white;
 }
