--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body{
 header{
     position: fixed;
     z-index: 100;
-    /* top 0; */
+    top: 0;
     right: 0;
     left: 0;
     background-color: #ff6900;
@@ -82,6 +82,7 @@ header{
 .row-main{
     display: flex;
     flex-wrap: wrap;
+    padding-top: 70px;
     /* background-color: yellow; */
 }
 
